[package]
name = "blanket_trait"
version = "0.2.0"
edition = "2024"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/blanket_trait"
description = """
Attribute macro that generates a trait with an inherent blanket implementation.
"""
keywords = ["blanket", "impl", "trait", "macro"]

[lib]
proc-macro = true

[dependencies]
